--- a/blog-front/package.json
+++ b/blog-front/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "axios": "^1.7.8",
     "pinia": "^2.2.6",
+    "primevue": "^4.2.4",
+    "vee-validate": "^4.14.7",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
