--- a/blog-front/package.json
+++ b/blog-front/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "gapi-script": "^1.2.0",
     "pinia": "^2.2.6",
     "primevue": "^4.2.4",
     "vee-validate": "^4.14.7",
